--- a/index1.html
+++ b/index1.html
@@ -80,4 +80,12 @@
     </section>
     <!-- home section end -->
 </body>
+<!-- Copyright -->
+<footer class="bg-light text-center text-lg-start" style="padding: 20px;">
+    <div class="text-center p-3" style="background-color: violet; color: white;">
+      itech@KIBU- Bungoma P.O BOX 1699-50200 Email:stephenmaingi2017@gmail.com Tel:+254707041070<br>
+       © 2021 Developed by: Stephen Maingi
+       <a class="text-dark" href="https://github.com/stemakwenyu"></a>
+   </div>
+   </footer>
 </html>
